--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "autoprefixer": "^10.4.18",
     "date-fns": "^3.6.0",
     "next": "latest",
-    "next-sanity": "^9.0.12",
+    "next-sanity": "^9.0.13",
     "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +32,7 @@
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.8",
+    "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.2"
   },
