--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-url-secret": "^1.6.5",
     "@sanity/vision": "^3.35.0",
+    "@sendgrid/mail": "^8.1.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.67",
