--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.18",
     "date-fns": "^3.6.0",
+    "firebase": "^10.11.1",
     "next": "latest",
     "next-sanity": "^9.0.13",
     "postcss": "^8.4.37",
