--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.18",
     "date-fns": "^3.6.0",
-    "firebase": "^10.11.1",
+    "firebase": "^10.12.0",
+    "firebase-admin": "^12.1.0",
     "next": "latest",
     "next-sanity": "^9.0.13",
     "postcss": "^8.4.37",
