--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-album": "^2.3.1",
     "rxjs": "^7.8.1",
     "sanity": "^3.40.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
@@ -37,7 +38,8 @@
     "styled-components": "^6.1.8",
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "yet-another-react-lightbox": "^3.18.0"
   },
   "devDependencies": {
     "@next/env": "latest",
