--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-photo-album": "^2.3.1",
     "rxjs": "^7.8.1",
     "sanity": "^3.42.1",
