--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.22",
     "@vercel/speed-insights": "^1.0.10",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.18",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@next/env": "latest",
+    "@types/aos": "^3.0.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "latest"
   }
