--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/assist": "^3.0.3",
     "@sanity/icons": "^2.11.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/orderable-document-list": "^1.2.1",
     "@sanity/preview-url-secret": "^1.6.5",
     "@sanity/vision": "^3.35.0",
     "@sendgrid/mail": "^8.1.3",
