--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@sanity/orderable-document-list": "^1.2.1",
     "@sanity/preview-url-secret": "^1.6.5",
     "@sanity/vision": "^3.35.0",
-    "@sendgrid/mail": "^8.1.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.3",
@@ -30,6 +29,7 @@
     "next": "latest",
     "next-sanity": "^9.0.20",
     "postcss": "^8.4.37",
+    "postmark": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
